--- a/src/Properties/Resources.resx
+++ b/src/Properties/Resources.resx
@@ -147,6 +147,9 @@
   <data name="PoweredBy" xml:space="preserve">
     <value>Powered by</value>
   </data>
+  <data name="Privacy" xml:space="preserve">
+    <value>Privacy</value>
+  </data>
   <data name="SignIn" xml:space="preserve">
     <value>Sign in</value>
   </data>
